welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:1: error: illegal start of simple pattern
var (int) biscuits = 0
                   ^RunHalf:2: error: '=' expected but ';' found.
var (int) caseOrange = 0
^RunHalf:2: error: illegal start of simple pattern
var (int) caseOrange = 0
                     ^RunHalf:3: error: '=' expected but ';' found.
while (!(2 * biscuits = caseOrange + 1)) {
^