welcome.lessons.welcome.variables.RunHalf.scala.code
var (int) biscuits = 0
var (int) caseOrange = 0
while (!(2 * biscuits = caseOrange + 1)) {
avance()
 if (estSurBiscuit) {biscuits=biscuits+1}
 if (getCouleurSol()==Color.orange) {caseOrange=caseOrange+1}
  
}